Calling bpy.ops.screen.screen_full_area() multiple times in python console causes Blender to crash #43139

Closed
opened 2015-01-05 22:24:27 +01:00 by jon denning · 13 comments
Member

System Information
Linux jdenning-Notebook 3.13.0-43-generic #72-Ubuntu SMP Mon Dec 8 19:35:06 UTC 2014 x86_64 x86_64 x86_64 GNU/Linux
Intel Corp Haswell-ULT Integrated Graphics Controller

Blender Version
Broken: 2.73 273fa0a on Linux and dcc5997 on Mac
Worked: 2.73 fdddd4e on Windows 64

Short description of error

Calling bpy.ops.screen.screen_full_area() multiple times in python console causes Blender to crash. Note: calling the first time returns {'FINISHED'}, but the second time (switching away from full-area mode) does not return anything. In fact, except for coming out of full-area mode, the console acts as if it didn't execute anything.

Exact steps for others to reproduce the error

  • Open the standard/default start-up .blend file (with info, 3D view, outliner, properties, timeline).
  • Change timeline area to Python console.
  • Type bpy.ops.screen.screen_full_area() and press enter. (console now takes up full window)
  • Press up arrow then enter to call function again. (Note that the line is still there)
  • Press enter to call the function again. (no need to press up!)
  • Repeat last two steps multiple times will cause Blender to crash after 1 to many times, usually within 10 calls.

Below is a dump of /tmp/blender.crash.txt

 
# backtrace
./blender(BLI_system_backtrace+0x1d) [0x11b5d3d]
./blender() [0x8e8d9b]
./blender() [0x8e8f9c]
/lib/x86_64-linux-gnu/libc.so.6(+0x36c30) [0x7fba14556c30]
./blender(BLI_rcti_isect_pt_v+0x4) [0x11a6bb4]
./blender() [0x8fe1c5]
./blender(wm_event_do_handlers+0x2bf) [0x90182f]
./blender(WM_main+0x18) [0x907548]
./blender(main+0x50a) [0x8eb73a]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7fba14541ec5]
./blender() [0x8e81d7]
**System Information** Linux jdenning-Notebook 3.13.0-43-generic #72-Ubuntu SMP Mon Dec 8 19:35:06 UTC 2014 x86_64 x86_64 x86_64 GNU/Linux Intel Corp Haswell-ULT Integrated Graphics Controller **Blender Version** Broken: 2.73 273fa0a on Linux and dcc5997 on Mac Worked: 2.73 fdddd4e on Windows 64 **Short description of error** Calling `bpy.ops.screen.screen_full_area()` multiple times in python console causes Blender to crash. Note: calling the first time returns `{'FINISHED'}`, but the second time (switching away from full-area mode) does not return anything. In fact, except for coming out of full-area mode, the console acts as if it didn't execute anything. **Exact steps for others to reproduce the error** - Open the standard/default start-up .blend file (with info, 3D view, outliner, properties, timeline). - Change timeline area to Python console. - Type `bpy.ops.screen.screen_full_area()` and press enter. (console now takes up full window) - Press up arrow then enter to call function again. (Note that the line is still there) - Press enter to call the function again. (no need to press up!) - Repeat last two steps multiple times will cause Blender to crash after 1 to many times, usually within 10 calls. Below is a dump of `/tmp/blender.crash.txt` ```# Blender 2.73 (sub 0), Commit date: 2014-12-23 15:42, Hash 273fa0a # backtrace ./blender(BLI_system_backtrace+0x1d) [0x11b5d3d] ./blender() [0x8e8d9b] ./blender() [0x8e8f9c] /lib/x86_64-linux-gnu/libc.so.6(+0x36c30) [0x7fba14556c30] ./blender(BLI_rcti_isect_pt_v+0x4) [0x11a6bb4] ./blender() [0x8fe1c5] ./blender(wm_event_do_handlers+0x2bf) [0x90182f] ./blender(WM_main+0x18) [0x907548] ./blender(main+0x50a) [0x8eb73a] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf5) [0x7fba14541ec5] ./blender() [0x8e81d7] ```
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gfxcoder

Added subscriber: @gfxcoder

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Confirmed in OSX, backtrace:


- 0  0x00000001013ea9e6 in BLI_rcti_isect_pt_v (rect=0xc000000000000038, xy=0x117937e4c) at /Users/dfelinto/blender/git/blender/source/blender/blenlib/intern/rct.c:86
- 1  0x000000010012e0d6 in wm_event_inside_i (event=0x117937e38, rect=0xc000000000000038) at /Users/dfelinto/blender/git/blender/source/blender/windowmanager/intern/wm_event_system.c:2074
- 2  0x000000010012d383 in wm_event_do_handlers (C=0x109d0b9e8) at /Users/dfelinto/blender/git/blender/source/blender/windowmanager/intern/wm_event_system.c:2325
- 3  0x0000000100122a0e in WM_main (C=0x109d0b9e8) at /Users/dfelinto/blender/git/blender/source/blender/windowmanager/intern/wm.c:489
#4  0x000000010011e395 in main (argc=1, argv=0x7fff5fbff780) at /Users/dfelinto/blender/git/blender/source/creator/creator.c:1740
Confirmed in OSX, backtrace: ``` - 0 0x00000001013ea9e6 in BLI_rcti_isect_pt_v (rect=0xc000000000000038, xy=0x117937e4c) at /Users/dfelinto/blender/git/blender/source/blender/blenlib/intern/rct.c:86 - 1 0x000000010012e0d6 in wm_event_inside_i (event=0x117937e38, rect=0xc000000000000038) at /Users/dfelinto/blender/git/blender/source/blender/windowmanager/intern/wm_event_system.c:2074 - 2 0x000000010012d383 in wm_event_do_handlers (C=0x109d0b9e8) at /Users/dfelinto/blender/git/blender/source/blender/windowmanager/intern/wm_event_system.c:2325 - 3 0x0000000100122a0e in WM_main (C=0x109d0b9e8) at /Users/dfelinto/blender/git/blender/source/blender/windowmanager/intern/wm.c:489 #4 0x000000010011e395 in main (argc=1, argv=0x7fff5fbff780) at /Users/dfelinto/blender/git/blender/source/creator/creator.c:1740 ```

Added subscribers: @JulianEisel, @jensverwiebe

Added subscribers: @JulianEisel, @jensverwiebe

@jensverwiebe could you test this in your system? according to @JulianEisel this happens only in 'custom' builds (not in official/buildbot builds). If that's really the case you may have a clue then.

@jensverwiebe could you test this in your system? according to @JulianEisel this happens only in 'custom' builds (not in official/buildbot builds). If that's really the case you may have a clue then.

update, this happens in 2.72, 2.71 and probably way before. So I don't believe it happens only with 'custom' builds ;) so nevermind the above claim

update, this happens in 2.72, 2.71 and probably way before. So I don't believe it happens only with 'custom' builds ;) so nevermind the above claim
Julian Eisel was assigned by Sergey Sharybin 2015-01-06 11:57:10 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Bet this is a nice puzzle for @JulianEisel!

Bet this is a nice puzzle for @JulianEisel!
Member

Indeed, this is a puzzle :/

Indeed, this is a puzzle :/

This issue was referenced by f19013158a

This issue was referenced by f19013158ab51dd8a9ed7a0121c2858c310f8286
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

But no puzzle is unsolvable, closed by commit f19013158a.

But no puzzle is unsolvable, closed by commit f19013158a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43139
No description provided.